--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 
 
     <!-- Footer Web component code (Angular, Vue) -->
-    <gcds-footer display="full" contextual-heading="Contextual navigation"
-        contextual-links='{ "About PHACronyms": "#" }'>
+    <gcds-footer display="compact">
     </gcds-footer>
 
 
